# Bijoux-Router

./: .gitignore  README.md  pyproject.toml
bijoux_router/: __init__.py
bijoux_router/cli/: main.py
bijoux_router/config/: loader.py  schema.py
bijoux_router/exceptions/: errors.py
bijoux_router/models/: request_response.py
bijoux_router/providers/: anthropic.py  base.py  cloudflare.py  cohere.py  factory.py  gemini.py  huggingface.py  mock.py  openai_compatible.py  openrouter.py  replicate.py
bijoux_router/quota/: tracker.py
bijoux_router/router/: engine.py  selection.py
bijoux_router/storage/: base.py  sqlite_backend.py
bijoux_router/utils/: logging.py  tokens.py
config/: all_providers.yaml  providers.yaml
documentation/: guide.html
examples/: usage.py
tests/: conftest.py  test_concurrent.py  test_config.py  test_errors.py  test_quota.py  test_router.py  test_selection.py  test_storage.py
